--- a/index.html
+++ b/index.html
@@ -194,9 +194,7 @@ background: #2A9F55;
 <h3>征文要求</h3>
 
 <li>除外国学者报告和大会邀请报告外，其余录用投稿一般以墙报形式交流；</li>
-<ul>
-  <li>投稿以原创性论文为主，应突出作者的创新与成果，具有较重要的学术价值或应用推广价值。我们同样欢迎本领域 &nbsp; 专家总结自己近年工作进展的综述性论文。注：所投本次会议的稿件既可以是尚未发表的原创性成果，也可以是结合 &nbsp; &nbsp; 自己已取得的一系列创新性成果的综合评述。本次会议的目的旨在加强交流。为尊重多数投稿人的意愿，会议论文集 &nbsp; &nbsp; 将以电子版形式汇总后奉献给大家。因此，参会交流的论文仍可以转投其它会议或期刊，与本次会议投稿不发生冲突 &nbsp;(本次会议不存在版权转让问题)。所有投稿者，请严格按照给出的论文模板及格式要求做成PDF版。详见“<a href="res/投稿模板.docx"><font color="#028B24">投稿模 &nbsp; &nbsp; &nbsp; &nbsp;板</font></a>”。所有投稿者，请注意在论文首页页脚同时注明第一作者或通讯作者的姓名及联系方式（单位、电话、电子邮件地 &nbsp;址）。来稿请注明论文所属征文范围中的类别。</li>
-</ul>
+  <li>投稿以原创性论文为主，应突出作者的创新与成果，具有较重要的学术价值或应用推广价值。我们同样欢迎本领域专家总结自己近年工作进展的综述性论文。注：所投本次会议的稿件既可以是尚未发表的原创性成果，也可以是结合自己已取得的一系列创新性成果的综合评述。本次会议的目的旨在加强交流。为尊重多数投稿人的意愿，会议论文集将以电子版形式汇总后奉献给大家。因此，参会交流的论文仍可以转投其它会议或期刊，与本次会议投稿不发生冲突 (本次会议不存在版权转让问题)。所有投稿者，请严格按照给出的论文模板及格式要求做成PDF版。详见“<a href="res/投稿模板.docx"><font color="#028B24">投稿模板</font></a>”。所有投稿者，请注意在论文首页页脚同时注明第一作者或通讯作者的姓名及联系方式（单位、电话、电子邮件地 址）。来稿请注明论文所属征文范围中的类别。</li>
 </div>
   </div>
       
