--- a/speakers.html
+++ b/speakers.html
@@ -157,19 +157,19 @@ background: #2A9F55;
           <td width="auto"><p><a href="http://bme.columbia.edu/kam-w-leong"><font color="#028B24">Prof.Kam Leong</font> -- The National Academy of Engineering (NAE) member，Samuel Y. Sheng Professor of Biomedical Engineering, Columbia University, USA. </a></p></td>
         </tr>
         <tr>
-          <td><a href="https://www.shrikezhang.com/team.html
-"><img src="res/Yu2.jpg" width="100" height="100" alt=""/></a></td>
-          <td width="auto"><p><a href="https://www.shrikezhang.com/team.html"><font color="#028B24">Yu Shrike Zhang</font></a> -- Instructor of Medicine, Associate Bioengineer, Brigham and Women's Hospital, Harvard Medical School, USA.</p></td>
-          </tr>
-        <tr>
-          <td width="101"><a href="https://www.columbiapsychiatry.org/profile/bin-xu-phd
-"><img src="res/Xub.jpg" width="100" height="100" alt=""/></a></td>
-          <td width="661"><p><a href="https://www.columbiapsychiatry.org/profile/bin-xu-phd&#10;"><font color="#028B24">Bin Xu</font></a> --  Assistant professor, Department of Psychology, Columbia University, USA.</p></td>
-          </tr>
-        <tr>
           <td><a href="https://ncats.nih.gov/staff/tagled
 "><img src="res/Tagle.jpg" width="100" height="100" alt=""/></a></td>
           <td width="auto"><p><a href="https://ncats.nih.gov/staff/tagled"><font color="#028B24">Danilo A. Tagle</font></a> -- Associate Director for Special Initiatives, National Center for Advancing Translational Sciences, National Institutes of Health (NIH), USA.</p></td>
+          </tr>
+        <tr>
+          <td width="101"><a href="https://www.shrikezhang.com/team.html
+"><img src="res/Yu2.jpg" width="100" height="100" alt=""/></a></td>
+          <td width="661"><p><a href="https://www.shrikezhang.com/team.html"><font color="#028B24">Yu Shrike Zhang</font></a> --  Instructor of Medicine, Associate Bioengineer, Brigham and Women's Hospital, Harvard Medical School, USA.</p></td>
+          </tr>
+        <tr>
+          <td><a href="https://www.columbiapsychiatry.org/profile/bin-xu-phd
+"><img src="res/Xub.jpg" width="100" height="100" alt=""/></a></td>
+          <td width="auto"><p><a href="https://www.columbiapsychiatry.org/profile/bin-xu-phd"><font color="#028B24">Bin Xu</font></a> --Assistant professor, Department of Psychology, Columbia University, USA. </p></td>
           </tr>
         <tr>
           <td><a href="http://chem.nju.edu.cn/staff/staff.asp?iname=%B3%C2%BA%E9%D4%A8
@@ -182,14 +182,14 @@ background: #2A9F55;
           <td width="auto"><p><a href="http://wecommer.com/zh-hans/conference/193/speaker/2430"><font color="#028B24">王春仁 研究员</font></a> -- 中国食品药品检定研究院，生物材料与组织工程室主任。</p></td>
         </tr>
         <tr>
-          <td><a href="http://bimd.seu.edu.cn&#10;
-"><img src="res/gu.jpg" width="100" height="100" alt=""/></a></td>
-          <td width="auto"><p><a href="http://bimd.seu.edu.cn&#10;"><font color="#028B24">顾忠泽 教授</font></a> -- 长江，杰青，东南大学生物科学与医学工程学院院长。</p></td>
-        </tr>
-        <tr>
           <td><a href="http://www.cebs.ac.cn/duiwu_teacher.php?id=19
 "><img src="res/Luo.jpg" width="100" height="100" alt=""/></a></td>
-          <td width="auto"><p><a href="http://www.cebs.ac.cn/duiwu_teacher.php?id=19"><font color="#028B24">罗振革 研究员 </font></a>-- 研究员，中科院上海生命科学研究院神经科学研究所。</p></td>
+          <td width="auto"><p><a href="http://www.cebs.ac.cn/duiwu_teacher.php?id=19"><font color="#028B24">罗振革 研究员</font></a> --杰青，中科院上海生命科学研究院神经科学研究所。 </p></td>
+        </tr>
+        <tr>
+          <td><a href="http://bimd.seu.edu.cn&#10;
+"><img src="res/gu.jpg" width="100" height="100" alt=""/></a></td>
+          <td width="auto"><p><a href="http://bimd.seu.edu.cn&#10;"><font color="#028B24">顾忠泽 教授</font></a>-- 长江，杰青，东南大学生物科学与医学工程学院院长。</p></td>
           </tr>
       </tbody>
     </table>
