--- a/speakers.html
+++ b/speakers.html
@@ -172,9 +172,9 @@ background: #2A9F55;
           <td width="auto"><p><a href="https://www.columbiapsychiatry.org/profile/bin-xu-phd"><font color="#028B24">Bin Xu</font></a> --Assistant professor, Department of Psychology, Columbia University, USA. </p></td>
           </tr>
         <tr>
-          <td><a href="http://chem.nju.edu.cn/staff/staff.asp?iname=%B3%C2%BA%E9%D4%A8
+          <td><a href="http://nrl.ntu.edu.cn/sjkxx/xsdw/content/afc77021-b16c-4119-beeb-5bd7bb3a1cf9.html
 "><img src="res/Gux.jpg" width="100" height="100" alt=""/></a></td>
-          <td width="auto"><p><a href="http://chem.nju.edu.cn/staff/staff.asp?iname=%B3%C2%BA%E9%D4%A8&#10;"><font color="#028B24">顾晓松 院士</font></a> -- 中国工程院院士, 南通大学江苏省神经再生重点实验室主任。</p></td>
+          <td width="auto"><p><a href="http://nrl.ntu.edu.cn/sjkxx/xsdw/content/afc77021-b16c-4119-beeb-5bd7bb3a1cf9.html"><font color="#028B24">顾晓松 院士</font></a> -- 中国工程院院士, 南通大学江苏省神经再生重点实验室主任。</p></td>
           </tr>
         <tr>
           <td><a href="http://wecommer.com/zh-hans/conference/193/speaker/2430
