--- a/speakers.html
+++ b/speakers.html
@@ -187,9 +187,9 @@ background: #2A9F55;
           <td width="auto"><p><a href="http://www.cebs.ac.cn/duiwu_teacher.php?id=19"><font color="#028B24">罗振革 研究员</font></a> --杰青，中科院上海生命科学研究院神经科学研究所。 </p></td>
         </tr>
         <tr>
-          <td><a href="http://bimd.seu.edu.cn&#10;
+          <td><a href="http://bme.seu.edu.cn/2011/1017/c463a12264/page.htm
 "><img src="res/gu.jpg" width="100" height="100" alt=""/></a></td>
-          <td width="auto"><p><a href="http://bimd.seu.edu.cn&#10;"><font color="#028B24">顾忠泽 教授</font></a>-- 长江，杰青，东南大学生物科学与医学工程学院院长。</p></td>
+          <td width="auto"><p><a href="http://bme.seu.edu.cn/2011/1017/c463a12264/page.htm"><font color="#028B24">顾忠泽 教授</font></a>-- 长江，杰青，东南大学生物科学与医学工程学院院长。</p></td>
           </tr>
       </tbody>
     </table>
