--- a/speakers2017.html
+++ b/speakers2017.html
@@ -183,9 +183,9 @@ background: #2A9F55;
 "><font color="#028B24">陈洪渊 院士</font></a> -- 南京大学化学化工学院教授，中国科学院院士（2001年当选），长期从事电化学分析基础、仿生催化、生物电化学、化学生物学和微全分析系统等领域的研究，主持完成了国家、省部委和国际合作科研项目近40项，发表论文近800篇， H因子为76，曾获国家自然科学二等奖、全国科学大会奖、Nature杰出导师奖等。</p></td>
           </tr>
         <tr>
-          <td><a href="http://bimd.seu.edu.cn
+          <td><a href="http://bme.seu.edu.cn/2011/1017/c463a12264/page.htm
 "><img src="res/gu.jpg" width="100" height="100" alt=""/></a></td>
-          <td width="auto"><p><a href="http://bimd.seu.edu.cn
+          <td width="auto"><p><a href="http://bme.seu.edu.cn/2011/1017/c463a12264/page.htm
 "><font color="#028B24">顾忠泽 教授</font></a> -- 长江，杰青，东南大学生物科学与医学工程学院院长、国家科技重大专项专家、国务院学位委员会生物医学评议组成员，仿生材料领域专家，曾获教育部自然科学一等奖、日内瓦发明博览会特别金奖等，目前在研器官芯片项目。已发表影响因子10以上论文38篇，他引近7000次，获专利42项，转让7项。</p></td>
         </tr>
         <tr>
