--- a/speakers.html
+++ b/speakers.html
@@ -154,12 +154,12 @@ background: #2A9F55;
          <tr>
           <td><a href="http://bme.columbia.edu/kam-w-leong
 "><img src="res/Leong2.jpg" width="100" height="100" alt=""/></a></td>
-          <td width="auto"><p><a href="http://bme.columbia.edu/kam-w-leong"><font color="#028B24">Prof.Kam Leong</font> -- The National Academy of Engineering (NAE) member，Samuel Y. Sheng Professor of Biomedical Engineering, Columbia University, USA. </a></p></td>
+          <td width="auto"><p><a href="http://bme.columbia.edu/kam-w-leong"><font color="#028B24">Prof.Kam Leong</font> -- The National Academy of Engineering (NAE) member, Samuel Y. Sheng Professor of Biomedical Engineering, Columbia University, USA. </a></p></td>
         </tr>
         <tr>
-          <td><a href="https://ncats.nih.gov/staff/tagled
-"><img src="res/Tagle.jpg" width="100" height="100" alt=""/></a></td>
-          <td width="auto"><p><a href="https://ncats.nih.gov/staff/tagled"><font color="#028B24">Danilo A. Tagle</font></a> -- Associate Director for Special Initiatives, National Center for Advancing Translational Sciences, National Institutes of Health (NIH), USA.</p></td>
+          <td><a href="https://www.bsse.ethz.ch/department/people/detail-person.html?persid=89956
+"><img src="res/Andreas.jpeg" width="100" height="100" alt=""/></a></td>
+          <td width="auto"><p><a href="https://www.bsse.ethz.ch/department/people/detail-person.html?persid=89956"><font color="#028B24">Prof. Dr. Andreas Hierlemann</font></a> -- Department Biosystems Science and Engineering, ETH Zurich, Switzerland. <a href="res/Abstract-Andreas.docx"><font color="green"><small><i>[Abstract]</i></small></font></a></p></td>
           </tr>
         <tr>
           <td width="101"><a href="https://www.shrikezhang.com/team.html
