--- a/speakers.html
+++ b/speakers.html
@@ -179,7 +179,7 @@ background: #2A9F55;
 		<tr>
           <td><a href="http://mse.ustb.edu.cn/kxyj/zyd/team/xtf.html
 "><img src="res/Xi.jpg" width="100" height="100" alt=""/></a></td>
-          <td width="auto"><p><a href="http://mse.ustb.edu.cn/kxyj/zyd/team/xtf.html"><font color="#028B24">奚廷斐 教授</font></a> -- 北京大学前沿交叉学科研究院生物医用材料与组织工程中心主任。</p></td>
+          <td width="auto"><p><a href="http://mse.ustb.edu.cn/kxyj/zyd/team/xtf.html"><font color="#028B24">奚廷斐 研究员</font></a> -- 北京大学前沿交叉学科研究院生物医用材料与组织工程中心主任。</p></td>
         </tr>
         <tr>
           <td><a href="http://wecommer.com/zh-hans/conference/193/speaker/2430
