--- a/speakers.html
+++ b/speakers.html
@@ -177,9 +177,8 @@ background: #2A9F55;
           <td width="auto"><p><a href="http://nrl.ntu.edu.cn/sjkxx/xsdw/content/afc77021-b16c-4119-beeb-5bd7bb3a1cf9.html"><font color="#028B24">顾晓松 院士</font></a> -- 中国工程院院士, 南通大学江苏省神经再生重点实验室主任。</p></td>
           </tr>
 		<tr>
-          <td><a href="http://mse.ustb.edu.cn/kxyj/zyd/team/xtf.html
-"><img src="res/Xi.jpg" width="100" height="100" alt=""/></a></td>
-          <td width="auto"><p><a href="http://mse.ustb.edu.cn/kxyj/zyd/team/xtf.html"><font color="#028B24">奚廷斐 研究员</font></a> -- 北京大学前沿交叉学科研究院生物医用材料与组织工程中心主任。</p></td>
+          <td><a href="res/Tingfei Xi-CV.docx"><img src="res/Xi.jpg" width="100" height="100" alt=""/></a></td>
+          <td width="auto"><p><a href="res/Tingfei Xi-CV.docx"><font color="#028B24">奚廷斐 教授</font></a> -- 北京大学前沿交叉学科研究院生物医用材料与组织工程中心主任。</p></td>
         </tr>
         <tr>
           <td><a href="http://wecommer.com/zh-hans/conference/193/speaker/2430
