--- a/speakers.html
+++ b/speakers.html
@@ -171,6 +171,11 @@ background: #2A9F55;
 "><img src="res/Xub.jpg" width="100" height="100" alt=""/></a></td>
           <td width="auto"><p><a href="https://www.columbiapsychiatry.org/profile/bin-xu-phd"><font color="#028B24">Bin Xu</font></a> --Assistant professor, Department of Psychology, Columbia University, USA. </p></td>
           </tr>
+		<tr>
+          <td><a href="res/CV-Dehua Chang.doc
+"><img src="res/dehuachang.jpg" width="100" height="100" alt=""/></a></td>
+          <td width="auto"><p><a href="res/CV-Dehua Chang.doc"><font color="#028B24">Dehua Chang</font></a> --Specially Appointed Associate Professor of department of Cardiovascular Surgery Osaka University Graduate School of Medicine.</p></td>
+          </tr>
         <tr>
           <td><a href="http://nrl.ntu.edu.cn/sjkxx/xsdw/content/afc77021-b16c-4119-beeb-5bd7bb3a1cf9.html
 "><img src="res/Gux.jpg" width="100" height="100" alt=""/></a></td>
