--- a/speakers.html
+++ b/speakers.html
@@ -177,9 +177,9 @@ background: #2A9F55;
           <td width="auto"><p><a href="res/CV-Dehua Chang.doc"><font color="#028B24">Dehua Chang</font></a> --Specially Appointed Associate Professor of department of Cardiovascular Surgery Osaka University Graduate School of Medicine.</p></td>
           </tr>
         <tr>
-          <td><a href="http://nrl.ntu.edu.cn/sjkxx/xsdw/content/afc77021-b16c-4119-beeb-5bd7bb3a1cf9.html
-"><img src="res/Gux.jpg" width="100" height="100" alt=""/></a></td>
-          <td width="auto"><p><a href="http://nrl.ntu.edu.cn/sjkxx/xsdw/content/afc77021-b16c-4119-beeb-5bd7bb3a1cf9.html"><font color="#028B24">顾晓松 院士</font></a> -- 中国工程院院士, 南通大学江苏省神经再生重点实验室主任。</p></td>
+          <td><a href="res/CV-Guxiaosong.doc
+"><img src="res/Guxiaosong.jpg" width="100" height="100" alt=""/></a></td>
+          <td width="auto"><p><a href="res/CV-Guxiaosong.doc"><font color="#028B24">顾晓松 院士</font></a> -- 中国工程院院士, 南通大学江苏省神经再生重点实验室主任。</p></td>
           </tr>
 		<tr>
           <td><a href="res/Tingfei Xi-CV.docx"><img src="res/Xi.jpg" width="100" height="100" alt=""/></a></td>
