--- a/contact.html
+++ b/contact.html
@@ -153,6 +153,7 @@ background: #2A9F55;
 <li>
   主办单位：<a href="http://seu.edu.cn">东南大学、美国哥伦比亚大学</a></li>
 <li>承办单位：<a href="http://sklb.seu.edu.cn">生物电子学国家重点实验室</a>、<a href="http://bme.seu.edu.cn">生物科学与医学工程学院</a></li>
+<li>赞助单位： 轩辕科技集团（中国）有限公司</li>
 <li>组委会：顾忠泽、陆祖宏、黄宁平、魏红梅、陈早早、万旺</li>
     </div>
 
@@ -185,6 +186,7 @@ background: #2A9F55;
      Workshop  on Microfluidic Chip and Tissue Engineering (WMCTE 2018)</p>
    <p class="foot" align="center">主办单位：东南大学、美国哥伦比亚大学<br>
     承办单位：<a href="http://sklb.seu.edu.cn">生物电子学国家重点实验室</a> <a href="http://bme.seu.edu.cn">生物科学与医学工程学院</a></p>
+	 <p class="foot" align="center">赞助单位：轩辕科技集团（中国）有限公司</p>
   <!-- end .footer --></div>
 <!-- end .container --></div>
 <script type="text/javascript">
