--- a/speakers.html
+++ b/speakers.html
@@ -195,6 +195,11 @@ background: #2A9F55;
 "><img src="res/Luo.jpg" width="100" height="100" alt=""/></a></td>
           <td width="auto"><p><a href="http://www.cebs.ac.cn/duiwu_teacher.php?id=19"><font color="#028B24">罗振革 研究员</font></a> --杰青，中科院上海生命科学研究院神经科学研究所。 </p></td>
         </tr>
+		<tr>
+          <td><a href="http://www.njkq.net/doctor/detail.asp?nid=60&classid=28
+"><img src="res/tongxin.png" width="100" height="100" alt=""/></a></td>
+          <td width="auto"><p><a href="http://www.njkq.net/doctor/detail.asp?nid=60&classid=28"><font color="#028B24">童昕 主任医师</font></a> --南京大学医学院附属口腔医院主任医师,口腔种植科主任。 </p></td>
+        </tr>
         <tr>
           <td><a href="http://bme.seu.edu.cn/2011/1017/c463a12264/page.htm
 "><img src="res/gu.jpg" width="100" height="100" alt=""/></a></td>
@@ -210,6 +215,7 @@ background: #2A9F55;
      Workshop  on Microfluidic Chip and Tissue Engineering (WMCTE 2018)</p>
    <p class="foot" align="center">主办单位：东南大学、美国哥伦比亚大学<br>
     承办单位：<a href="http://sklb.seu.edu.cn">生物电子学国家重点实验室</a> <a href="http://bme.seu.edu.cn">生物科学与医学工程学院</a></p>
+	 <p class="foot" align="center">赞助单位：轩辕科技集团（中国）有限公司</p>
   <!-- end .footer --></div>
 <!-- end .container --></div>
 
