--- a/contact.html
+++ b/contact.html
@@ -153,14 +153,12 @@ background: #2A9F55;
 <li>
   主办单位：<a href="http://seu.edu.cn">东南大学、美国哥伦比亚大学</a></li>
 <li>承办单位：<a href="http://sklb.seu.edu.cn">生物电子学国家重点实验室</a>、<a href="http://bme.seu.edu.cn">生物科学与医学工程学院</a></li>
-<li>赞助单位： 轩辕科技集团（中国）有限公司</li>
-<li>组委会：顾忠泽、陆祖宏、黄宁平、魏红梅、陈早早、万旺</li>
+<li>组委会：顾忠泽、陆祖宏、赵祥伟、程斌、黄宁平、魏红梅、陈早早</li>
     </div>
 
 <div class="text">
 <h3>会议联系方式</h3>
   <li>联系人： 魏红梅  025-83795632-801，17705163738， &nbsp;hmwei@seu.edu.cn</li>
-<p> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 万旺 &nbsp; 18795968586， wanwang@Outlook.com</p>
   <li>通讯地址：南京市四牌楼2号 东南大学生物电子学国家重点实验室</li>
 <li>邮编：210096</li>
 </div>
